exports[`inferType() individual.name 1`] = `
Object {
  "context": Object {
    "type": Object {
      "card": "seq",
      "domain": <DOMAIN>,
      "name": "text",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "card": "seq",
          "domain": <DOMAIN>,
          "name": "text",
        },
      },
      "name": "navigate",
      "path": "name",
    },
  ],
}
`;

exports[`inferType() individual.name:count() 1`] = `
Object {
  "context": Object {
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "number",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "card": "seq",
          "domain": <DOMAIN>,
          "name": "text",
        },
      },
      "name": "navigate",
      "path": "name",
    },
    Object {
      "aggregate": "count",
      "context": Object {
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "number",
        },
      },
      "name": "aggregate",
    },
  ],
}
`;

exports[`inferType() individual.sample 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": null,
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": "sample",
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "sample",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "sample",
    },
  ],
}
`;

exports[`inferType() individual.sample.title 1`] = `
Object {
  "context": Object {
    "type": Object {
      "card": "seq",
      "domain": <DOMAIN>,
      "name": "text",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "sample",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "sample",
    },
    Object {
      "context": Object {
        "type": Object {
          "card": "seq",
          "domain": <DOMAIN>,
          "name": "text",
        },
      },
      "name": "navigate",
      "path": "title",
    },
  ],
}
`;

exports[`inferType() individual:define(newname := name):select(a := newname, b := name) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "a": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
        "b": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "newname",
        "query": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "a": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "b": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "newname",
            },
          ],
        },
        "b": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": null,
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": "individual",
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "define",
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name).nickname 1`] = `
Object {
  "context": Object {
    "type": Object {
      "card": "seq",
      "domain": <DOMAIN>,
      "name": "text",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "card": "seq",
          "domain": <DOMAIN>,
          "name": "text",
        },
      },
      "name": "navigate",
      "path": "nickname",
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name):select(nickname) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "nickname": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "nickname": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "nickname": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "nickname",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:define(nickname := name):select(nickname:select(code)) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "nickname": Object {
          "type": Object {
            "attribute": Object {
              "code": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "invalid",
                },
              },
            },
            "card": null,
            "domain": <DOMAIN>,
            "entity": null,
            "name": "record",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "nickname",
        "query": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "nickname": Object {
              "type": Object {
                "attribute": Object {
                  "code": Object {
                    "type": Object {
                      "card": null,
                      "domain": <DOMAIN>,
                      "name": "invalid",
                    },
                  },
                },
                "card": null,
                "domain": <DOMAIN>,
                "entity": null,
                "name": "record",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "nickname": Object {
          "context": Object {
            "type": Object {
              "attribute": Object {
                "code": Object {
                  "type": Object {
                    "card": null,
                    "domain": <DOMAIN>,
                    "name": "invalid",
                  },
                },
              },
              "card": null,
              "domain": <DOMAIN>,
              "entity": null,
              "name": "record",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "nickname",
            },
            Object {
              "context": Object {
                "type": Object {
                  "attribute": Object {
                    "code": Object {
                      "type": Object {
                        "card": null,
                        "domain": <DOMAIN>,
                        "name": "invalid",
                      },
                    },
                  },
                  "card": null,
                  "domain": <DOMAIN>,
                  "entity": null,
                  "name": "record",
                },
              },
              "name": "select",
              "select": Object {
                "code": Object {
                  "context": Object {
                    "type": Object {
                      "card": null,
                      "domain": <DOMAIN>,
                      "name": "invalid",
                    },
                  },
                  "name": "pipeline",
                  "pipeline": Array [
                    Object {
                      "context": Object {
                        "type": Object {
                          "card": null,
                          "domain": <DOMAIN>,
                          "name": "invalid",
                        },
                      },
                      "name": "navigate",
                      "path": "code",
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:define(s := sample:count()):select(s:select(title)) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE s>",
    "type": Object {
      "attribute": Object {
        "s": Object {
          "type": Object {
            "attribute": Object {
              "title": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "invalid",
                },
              },
            },
            "card": null,
            "domain": <DOMAIN>,
            "entity": null,
            "name": "record",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "binding": Object {
        "name": "s",
        "query": Object {
          "context": Object {
            "domain": <DOMAIN>,
            "prev": "<PREV CONTEXT>",
            "scope": "<SCOPE [empty]>",
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "number",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "attribute": null,
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "entity": "sample",
                  "name": "record",
                },
              },
              "name": "navigate",
              "path": "sample",
            },
            Object {
              "aggregate": "count",
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "number",
                },
              },
              "name": "aggregate",
            },
          ],
        },
      },
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE s>",
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "define",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE s>",
        "type": Object {
          "attribute": Object {
            "s": Object {
              "type": Object {
                "attribute": Object {
                  "title": Object {
                    "type": Object {
                      "card": null,
                      "domain": <DOMAIN>,
                      "name": "invalid",
                    },
                  },
                },
                "card": null,
                "domain": <DOMAIN>,
                "entity": null,
                "name": "record",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "s": Object {
          "context": Object {
            "domain": <DOMAIN>,
            "prev": "<PREV CONTEXT>",
            "scope": "<SCOPE [empty]>",
            "type": Object {
              "attribute": Object {
                "title": Object {
                  "type": Object {
                    "card": null,
                    "domain": <DOMAIN>,
                    "name": "invalid",
                  },
                },
              },
              "card": null,
              "domain": <DOMAIN>,
              "entity": null,
              "name": "record",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "number",
                },
              },
              "name": "navigate",
              "path": "s",
            },
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "attribute": Object {
                    "title": Object {
                      "type": Object {
                        "card": null,
                        "domain": <DOMAIN>,
                        "name": "invalid",
                      },
                    },
                  },
                  "card": null,
                  "domain": <DOMAIN>,
                  "entity": null,
                  "name": "record",
                },
              },
              "name": "select",
              "select": Object {
                "title": Object {
                  "context": Object {
                    "domain": <DOMAIN>,
                    "prev": "<PREV CONTEXT>",
                    "scope": "<SCOPE [empty]>",
                    "type": Object {
                      "card": null,
                      "domain": <DOMAIN>,
                      "name": "invalid",
                    },
                  },
                  "name": "pipeline",
                  "pipeline": Array [
                    Object {
                      "context": Object {
                        "domain": <DOMAIN>,
                        "prev": "<PREV CONTEXT>",
                        "scope": "<SCOPE [empty]>",
                        "type": Object {
                          "card": null,
                          "domain": <DOMAIN>,
                          "name": "invalid",
                        },
                      },
                      "name": "navigate",
                      "path": "title",
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:group(age)) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "type": Object {
      "attribute": Object {
        "age": Object {
          "groupBy": true,
          "type": Object {
            "card": "opt",
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
        "individual": Object {
          "type": Object {
            "attribute": null,
            "card": "seq",
            "domain": <DOMAIN>,
            "entity": "individual",
            "name": "record",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "byPath": Array [
        "age",
      ],
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": Object {
            "age": Object {
              "groupBy": true,
              "type": Object {
                "card": "opt",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "individual": Object {
              "type": Object {
                "attribute": null,
                "card": "seq",
                "domain": <DOMAIN>,
                "entity": "individual",
                "name": "record",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "group",
    },
  ],
}
`;

exports[`inferType() individual:group(age):name) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "type": Object {
      "card": "seq",
      "domain": <DOMAIN>,
      "name": "text",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "byPath": Array [
        "age",
      ],
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": Object {
            "age": Object {
              "groupBy": true,
              "type": Object {
                "card": "opt",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "individual": Object {
              "type": Object {
                "attribute": null,
                "card": "seq",
                "domain": <DOMAIN>,
                "entity": "individual",
                "name": "record",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "group",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "card": "seq",
          "domain": <DOMAIN>,
          "name": "text",
        },
      },
      "name": "navigate",
      "path": "name",
    },
  ],
}
`;

exports[`inferType() individual:group(age):select(age, name)) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "type": Object {
      "attribute": Object {
        "age": Object {
          "type": Object {
            "card": "seq",
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
        "name": Object {
          "type": Object {
            "card": "seq",
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "byPath": Array [
        "age",
      ],
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": Object {
            "age": Object {
              "groupBy": true,
              "type": Object {
                "card": "opt",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "individual": Object {
              "type": Object {
                "attribute": null,
                "card": "seq",
                "domain": <DOMAIN>,
                "entity": "individual",
                "name": "record",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "group",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": Object {
            "age": Object {
              "type": Object {
                "card": "seq",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "name": Object {
              "type": Object {
                "card": "seq",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "age": Object {
          "context": Object {
            "domain": <DOMAIN>,
            "prev": "<PREV CONTEXT>",
            "scope": "<SCOPE [empty]>",
            "type": Object {
              "card": "seq",
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "attribute": null,
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "entity": "individual",
                  "name": "record",
                },
              },
              "name": "navigate",
              "path": "individual",
            },
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "age",
            },
          ],
        },
        "name": Object {
          "context": Object {
            "domain": <DOMAIN>,
            "prev": "<PREV CONTEXT>",
            "scope": "<SCOPE [empty]>",
            "type": Object {
              "card": "seq",
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "attribute": null,
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "entity": "individual",
                  "name": "record",
                },
              },
              "name": "navigate",
              "path": "individual",
            },
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:group(age):select(name)) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "type": Object {
      "attribute": Object {
        "name": Object {
          "type": Object {
            "card": "seq",
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "byPath": Array [
        "age",
      ],
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": Object {
            "age": Object {
              "groupBy": true,
              "type": Object {
                "card": "opt",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "individual": Object {
              "type": Object {
                "attribute": null,
                "card": "seq",
                "domain": <DOMAIN>,
                "entity": "individual",
                "name": "record",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "group",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "type": Object {
          "attribute": Object {
            "name": Object {
              "type": Object {
                "card": "seq",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "name": Object {
          "context": Object {
            "domain": <DOMAIN>,
            "prev": "<PREV CONTEXT>",
            "scope": "<SCOPE [empty]>",
            "type": Object {
              "card": "seq",
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "attribute": null,
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "entity": "individual",
                  "name": "record",
                },
              },
              "name": "navigate",
              "path": "individual",
            },
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "type": Object {
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "name",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := age) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "a": Object {
          "type": Object {
            "card": "opt",
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "a": Object {
              "type": Object {
                "card": "opt",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "card": "opt",
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "age",
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, b := name) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "a": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
        "b": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "a": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "b": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "b": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, b := name).a 1`] = `
Object {
  "context": Object {
    "type": Object {
      "card": "seq",
      "domain": <DOMAIN>,
      "name": "text",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "a": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "b": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "b": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
      },
    },
    Object {
      "context": Object {
        "type": Object {
          "card": "seq",
          "domain": <DOMAIN>,
          "name": "text",
        },
      },
      "name": "navigate",
      "path": "a",
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, s := sample) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "a": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
        "s": Object {
          "type": Object {
            "attribute": null,
            "card": "seq",
            "domain": <DOMAIN>,
            "entity": "sample",
            "name": "record",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "a": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "s": Object {
              "type": Object {
                "attribute": null,
                "card": "seq",
                "domain": <DOMAIN>,
                "entity": "sample",
                "name": "record",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "s": Object {
          "context": Object {
            "type": Object {
              "attribute": null,
              "card": "seq",
              "domain": <DOMAIN>,
              "entity": "sample",
              "name": "record",
            },
          },
          "name": "navigate",
          "path": "sample",
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, s := sample.title) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "a": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
        "s": Object {
          "type": Object {
            "card": "seq",
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "a": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "s": Object {
              "type": Object {
                "card": "seq",
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "s": Object {
          "context": Object {
            "type": Object {
              "card": "seq",
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "attribute": null,
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "entity": "sample",
                  "name": "record",
                },
              },
              "name": "navigate",
              "path": "sample",
            },
            Object {
              "context": Object {
                "type": Object {
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "name": "text",
                },
              },
              "name": "navigate",
              "path": "title",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:select(a := name, s := sample:count()) 1`] = `
Object {
  "context": Object {
    "type": Object {
      "attribute": Object {
        "a": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "text",
          },
        },
        "s": Object {
          "type": Object {
            "card": null,
            "domain": <DOMAIN>,
            "name": "number",
          },
        },
      },
      "card": "seq",
      "domain": <DOMAIN>,
      "entity": null,
      "name": "record",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "context": Object {
        "type": Object {
          "attribute": Object {
            "a": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "text",
              },
            },
            "s": Object {
              "type": Object {
                "card": null,
                "domain": <DOMAIN>,
                "name": "number",
              },
            },
          },
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": null,
          "name": "record",
        },
      },
      "name": "select",
      "select": Object {
        "a": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "text",
            },
          },
          "name": "navigate",
          "path": "name",
        },
        "s": Object {
          "context": Object {
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "number",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "type": Object {
                  "attribute": null,
                  "card": "seq",
                  "domain": <DOMAIN>,
                  "entity": "sample",
                  "name": "record",
                },
              },
              "name": "navigate",
              "path": "sample",
            },
            Object {
              "aggregate": "count",
              "context": Object {
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "number",
                },
              },
              "name": "aggregate",
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`inferType() individual:unknown() : fails on unknown aggregate 1`] = `
Object {
  "context": Object {
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "invalid",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "type": Object {
          "attribute": null,
          "card": "seq",
          "domain": <DOMAIN>,
          "entity": "individual",
          "name": "record",
        },
      },
      "name": "navigate",
      "path": "individual",
    },
    Object {
      "aggregate": "unknown",
      "context": Object {
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "invalid",
        },
      },
      "name": "aggregate",
    },
  ],
}
`;
